# swig-pypi

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists.txt.bak  LICENSE-SWIG  LICENSE-UNIVERSITIES  MANIFEST.in  README.md  pyproject.tml  pyproject.toml  report.txt  setup.cfg  setup.py  swig_version.cmake
.github/workflows/: build.yml  dev_workflow.yml  swig-update-autocheck.yml
src/swig/: __init__.py  _version.py
