[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "swig"
description = "SWIG is a software development tool that connects programs written in C and C++ with a variety of high-level programming languages."
keywords = ["swig", "build", "c", "c++"]
license = {text = "https://github.com/swig/swig/blob/master/LICENSE"}
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "License :: Other/Proprietary License",
  "Programming Language :: C",
  "Programming Language :: C++",
  "Programming Language :: Python",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]
dynamic = ["version"]


[tool.scikit-build]
wheel.py-api = "py2.py3"
wheel.expand-macos-universal-tags = true
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/swig/_version.py"]
wheel.install-dir = "swig/data"

[tool.cibuildwheel]
build = "cp39-*"
test-command = [
  "swig -version",
  "swig -pcreversion",
  "swig -help",
]
environment.PIP_ONLY_BINARY = ":all:"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux1"
manylinux-i686-image = "manylinux1"


[project.scripts]
swig = "swig:swig"
"swig4.0" = "swig:swig"

[project.urls]
Homepage = "https://swig.org/"
Download = "https://swig.org/download.html"
"Source Code" = "https://github.com/nightlark/swig-pypi"
"Bug Tracker" = "https://github.com/nightlark/swig-pypi/issues"

[tool.setuptools_scm]
version_file = "src/swig/_version.py"
